@@ -1,0 +1,6 @@
+CORE
+timeunits1.sv
+
+^EXIT=10$
+^SIGNAL=0$
+--
