@@ -313,6 +313,8 @@ IREP_ID_ONE(verilog_ref)
 IREP_ID_ONE(verilog_reg)
 IREP_ID_ONE(verilog_integer)
 IREP_ID_ONE(verilog_time)
+IREP_ID_ONE(verilog_timeunit)
+IREP_ID_ONE(verilog_timeprecision)
 IREP_ID_ONE(verilog_iff)
 IREP_ID_ONE(verilog_implies)
 IREP_ID_ONE(offset)
