@@ -3442,6 +3442,12 @@ void verilog_synthesist::synth_module_item(
   else if(module_item.id() == ID_function_call)
   {
   }
+  else if(module_item.id() == ID_verilog_timeunit)
+  {
+  }
+  else if(module_item.id() == ID_verilog_timeprecision)
+  {
+  }
   else
   {
     throw errort().with_location(module_item.source_location())
